--- a/hff-backoffice/main.css
+++ b/hff-backoffice/main.css
@@ -61,3 +61,14 @@ button {
     padding-left: 0 !important;
     padding-right: 0 !important;
 }
+
+.btn-microsoft {
+    background-color: #2672ec;
+    color: white;
+    padding: 10px;
+    border-radius: 4px;
+    display: block;
+    text-align: center;
+    margin-bottom: 20px;
+    text-decoration: none;
+}
