--- a/hff-backoffice/main.css
+++ b/hff-backoffice/main.css
@@ -5,11 +5,97 @@ body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    /* Prevents horizontal scrolling */
+    padding: 8rem;
 }
 
 * {
     box-sizing: border-box;
+}
+
+button {
+    padding: 10px 15px;
+    margin: 10px 0;
+    cursor: pointer;
+}
+
+/* Override Bootstrap container if needed */
+.container-fluid {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+}
+
+.btn-microsoft {
+    background-color: #2672ec;
+    color: white;
+    padding: 10px;
+    border-radius: 4px;
+    display: block;
+    text-align: center;
+    margin-bottom: 20px;
+    text-decoration: none;
+}
+
+.container {
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.navbar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+    height: 5rem;
+    padding: 0.75rem 1rem;
+    margin-bottom: 0;
+    width: 100%;
+}
+
+.navbar-brand {
+    margin-left: 1rem;
+    padding: 0.5rem 0;
+}
+
+.navbar-nav .nav-link {
+    margin-right: 1rem;
+    padding: 0.5rem 1rem;
+}
+
+.sidebar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 100;
+    padding: 0;
+    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+    width: 16.67%;
+    top: 5rem;
+}
+
+.sidebar-sticky {
+    position: relative;
+    height: calc(100vh - 70px);
+    padding-top: 1rem;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+
+.main-content {
+    margin-left: 16.67%;
+}
+
+.sidebar .nav-link {
+    color: #333;
+    text-decoration: none;
+}
+
+.sidebar .nav-link:hover {
+    color: #000;
+    text-decoration: none;
+    background-color: rgba(0, 0, 0, 0.05);
 }
 
 /* Remove padding from container on small screens */
@@ -37,38 +123,17 @@ body {
     .input-group .btn {
         margin-top: 10px;
     }
+
+    .sidebar {
+        width: 100%;
+        height: auto;
+        position: relative;
+        top: 0;
+    }
 }
 
-button {
-    padding: 10px 15px;
-    margin: 10px 0;
-    cursor: pointer;
-}
-
-.container {
-    max-width: 960px;
-    margin: 0 auto;
-    padding: 20px;
-}
-
-.navbar {
-    margin-bottom: 0;
-    width: 100%;
-}
-
-/* Override Bootstrap container if needed */
-.container-fluid {
-    padding-left: 0 !important;
-    padding-right: 0 !important;
-}
-
-.btn-microsoft {
-    background-color: #2672ec;
-    color: white;
-    padding: 10px;
-    border-radius: 4px;
-    display: block;
-    text-align: center;
-    margin-bottom: 20px;
-    text-decoration: none;
+@media (min-width: 992px) {
+    .main-content {
+        margin-left: 16.67%;
+    }
 }
