--- a/hff-backoffice/main.css
+++ b/hff-backoffice/main.css
@@ -1,10 +1,17 @@
-html,
+html {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    margin: 0;
+    overflow-x: hidden;
+    padding: 0;
+}
+
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     margin: 0;
     overflow-x: hidden;
-    padding: 4.4rem;
+    padding: 7.8rem;
 }
 
 * {
