--- a/hff-backoffice/main.css
+++ b/hff-backoffice/main.css
@@ -135,6 +135,8 @@ button {
 @media (max-width: 768px) {
     body {
         padding-top: 8.8rem !important;
+        padding-left: 0 !important;
+        padding-right: 0 !important;
     }
 
     .container {
